name:                formify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pigam/formify#readme
license:             GPL-3
license-file:        LICENSE
author:              Pierre Gambarotto
maintainer:          pierre.gambarotto@math.univ-toulouse.fr
copyright:           2019 Pierre Gambarotto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
                     , servant-multipart
                     , network >= 2.8
                     , http-client
                     , http-media
                     , bytestring
  default-language:    Haskell2010

executable formify
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , formify
  default-language:    Haskell2010

test-suite formify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , formify
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pigam/formify
